# kilo-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kilo.c
cpp-terminal/: CMakeLists.txt  kilo-cppt.cpp  kilo.cpp
kilo-cppt/: CMakeLists.txt  main.cpp
